# socratic-council-of-five

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/cli/: package.json  tsconfig.json  tsup.config.ts
apps/cli/src/: index.ts
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: http.rs  lib.rs  main.rs
apps/desktop/src/assets/emoji/: ATTRIBUTION.md
apps/desktop/src/components/: ConfigModal.tsx  ConflictGraph.tsx  ConversationExport.tsx  ConversationSearch.tsx  Markdown.tsx  Starfield.tsx
apps/desktop/src/components/chat/: MessageBubble.tsx  SidePanel.tsx
apps/desktop/src/components/icons/: ProviderIcons.tsx  ReactionIcons.tsx
apps/desktop/src/features/chat/: agentUi.ts  messageActions.ts
apps/desktop/src/hooks/: useAgentResponse.ts  useCouncilSession.ts
apps/desktop/src/pages/: Chat.tsx  Home.tsx  Settings.tsx
apps/desktop/src/services/: api.ts  conversationExport.ts  mcp.ts  tauriTransport.ts  tools.ts
apps/desktop/src/stores/: config.ts  councilSession.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/utils/: cost.ts  inlineQuotes.test.ts  inlineQuotes.ts
